// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parallaxWebsiteActions Dispatches the correct action and payload (activateIcon) 1`] = `
Array [
  Object {
    "id": 3,
    "type": "ACTIVATE_ICON",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (dotOnChange) 1`] = `
Array [
  Object {
    "type": "DOTS_ON_CHANGE",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (feedbackOnChange) 1`] = `
Array [
  Object {
    "type": "FEEDBACK_ON_CHANGE",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (imageHover) 1`] = `
Array [
  Object {
    "id": 1,
    "type": "IMAGE_HOVER",
    "val": true,
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (imageOnClick) 1`] = `
Array [
  Object {
    "id": 2,
    "type": "IMAGE_ON_CLICK",
    "val": true,
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (initImages) 1`] = `
Array [
  Object {
    "array": Array [
      Object {
        "a": 1,
        "b": 2,
      },
      Object {
        "a": 1,
        "b": 2,
      },
    ],
    "type": "INIT_IMAGES",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (initServices) 1`] = `
Array [
  Object {
    "array": Array [
      Object {
        "a": 1,
        "b": 2,
      },
      Object {
        "a": 1,
        "b": 2,
      },
    ],
    "type": "INIT_SERVICES",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (initTeamMembers) 1`] = `
Array [
  Object {
    "array": Array [
      Object {
        "a": 1,
        "b": 2,
      },
      Object {
        "a": 1,
        "b": 2,
      },
    ],
    "type": "INIT_TEAM_MEMBERS",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (menuButtonIsToggled) 1`] = `
Array [
  Object {
    "type": "MENU_BUTTON_IS_TOGGLED",
    "val": true,
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (nextImage) 1`] = `
Array [
  Object {
    "id": 2,
    "type": "NEXT_IMAGE",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (previousImage) 1`] = `
Array [
  Object {
    "id": 4,
    "type": "PREVIOUS_IMAGE",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (showCard) 1`] = `
Array [
  Object {
    "type": "SHOW_CARD",
    "val": true,
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (startChangingFeedbacks) 1`] = `
Array [
  Object {
    "dotId": 3,
    "feedbackIndex": 2,
    "type": "START_CHANGING_FEEDBACKS",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (stopChangingFeedbacks) 1`] = `
Array [
  Object {
    "type": "STOP_CHANGING_FEEDBACKS",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (submitMessage) 1`] = `
Array [
  Object {
    "company": "crypto347",
    "contact": "012345678",
    "email": "qasimovahumay@gmail.com",
    "message": "Hey",
    "name": "Humay",
    "type": "SUBMIT_MESSAGE",
  },
]
`;

exports[`parallaxWebsiteActions Dispatches the correct action and payload (toggleMenuButton) 1`] = `
Array [
  Object {
    "type": "TOGGLE_MENU_BUTTON",
  },
]
`;
